Bug 1896843: Make webgpu setBindGroup take an optional bind group, matching spec. r=webidl,webgpu-reviewers,nical,saschanaz,ErichDonGubler

This includes a test that checks that setBindGroup can be passed a null
bindGroup.

Differential Revision: https://phabricator.services.mozilla.com/D223884