dom/webgpu/ComputePassEncoder.cpp
@@ -47,15 +47,19 @@ void ComputePassEncoder::Cleanup() {
 }
 
 void ComputePassEncoder::SetBindGroup(
-    uint32_t aSlot, const BindGroup& aBindGroup,
+    uint32_t aSlot, BindGroup* const aBindGroup,
     const dom::Sequence<uint32_t>& aDynamicOffsets) {
   if (!mValid) {
     return;
   }
-  mUsedBindGroups.AppendElement(&aBindGroup);
-  ffi::wgpu_recorded_compute_pass_set_bind_group(
-      mPass.get(), aSlot, aBindGroup.mId, aDynamicOffsets.Elements(),
-      aDynamicOffsets.Length());
+  RawId bindGroup = 0;
+  if (aBindGroup) {
+    mUsedBindGroups.AppendElement(aBindGroup);
+    bindGroup = aBindGroup->mId;
+  }
+  ffi::wgpu_recorded_compute_pass_set_bind_group(mPass.get(), aSlot, bindGroup,
+                                                 aDynamicOffsets.Elements(),
+                                                 aDynamicOffsets.Length());
 }
 
 void ComputePassEncoder::SetPipeline(const ComputePipeline& aPipeline) {
