dom/webgpu/RenderBundleEncoder.cpp
@@ -85,13 +85,17 @@ void RenderBundleEncoder::Cleanup() {
 }
 
 void RenderBundleEncoder::SetBindGroup(
-    uint32_t aSlot, const BindGroup& aBindGroup,
+    uint32_t aSlot, BindGroup* const aBindGroup,
     const dom::Sequence<uint32_t>& aDynamicOffsets) {
   if (!mValid) {
     return;
   }
-  mUsedBindGroups.AppendElement(&aBindGroup);
-  ffi::wgpu_render_bundle_set_bind_group(mEncoder.get(), aSlot, aBindGroup.mId,
+  RawId bindGroup = 0;
+  if (aBindGroup) {
+    mUsedBindGroups.AppendElement(aBindGroup);
+    bindGroup = aBindGroup->mId;
+  }
+  ffi::wgpu_render_bundle_set_bind_group(mEncoder.get(), aSlot, bindGroup,
                                          aDynamicOffsets.Elements(),
                                          aDynamicOffsets.Length());
 }
