dom/webgpu/RenderBundleEncoder.h
@@ -44,7 +44,7 @@ class RenderBundleEncoder final : public ObjectBase, public ChildOf<Device> {
 
  public:
   // programmable pass encoder
-  void SetBindGroup(uint32_t aSlot, const BindGroup& aBindGroup,
+  void SetBindGroup(uint32_t aSlot, BindGroup* const aBindGroup,
                     const dom::Sequence<uint32_t>& aDynamicOffsets);
   // render encoder base
   void SetPipeline(const RenderPipeline& aPipeline);
