dom/webgpu/RenderPassEncoder.h
@@ -61,7 +61,7 @@ class RenderPassEncoder final : public ObjectBase,
 
  public:
   // programmable pass encoder
-  void SetBindGroup(uint32_t aSlot, const BindGroup& aBindGroup,
+  void SetBindGroup(uint32_t aSlot, BindGroup* const aBindGroup,
                     const dom::Sequence<uint32_t>& aDynamicOffsets);
   // render encoder base
   void SetPipeline(const RenderPipeline& aPipeline);
